# actionbox

./: .gitignore  README.md
.github/workflows/: github-actions-demo.yml  hello-world.yml  hosted-ninja-vcpkg.yml  hosted-ninja-vcpkg_submod.yml  inputter.yml  kosak.yml  outputter.yml
cpp/prog1/: CMakeLists.txt  CMakePresets.json  prog1.cc  prog1.h  vcpkg.json
